admin/webUI/assets/css/_utility.css
/*SUBLIME/General CSS*/

.small-font {
  font-size: 12px;
}

.base-font {
  font-size: 14px;
}

.text-green {
  color: #4CB973;
}

.text-red {
  color: #EC3D2E;
}

.bg-grey {
  background: rgba(213, 214, 214, 0.3);
}

.bg-green,
.success {
  background: #4CAF50;
}

.bg-red {
  background: red;
}

.error {
  background: #EC3D2E;
}

.bg-red,
.bg-green,
.success,
.error {
  color: white;
}

.text-darkBlue {
  color: #2F3757;
}

.position-relative {
  position: relative;
}

.tr-corner {
  position: absolute;
  top: 0;
  right: 10px;
}

.text-white {
  color: white;
}

.text-orange {
  color: #DB752B;
}

.text-black {
  color: black;
}

.text-right {
  text-align: right;
}

.text-center {
  text-align: center;
}

.big-font {
  font-size: 16px;
}

.pull-right {
  float: right;
}

.height-inherit {
  height: inherit;
}

.italic {
  font-style: italic;
}

.bold {
  font-weight: bold;
}

.uppercase {
  text-transform: uppercase;
}

.show-none {
  display: none;
}

.inline-block {
  display: inline-block;
}

.width100 {
  width: 100%;
}

.b-border {
  border-bottom: 1px solid rgba(0, 0, 0, .12);
}

.t-border {
  border-top: 1px solid rgba(0, 0, 0, .12);
}

.l-border {
  border-left: 1px solid rgba(0, 0, 0, .12);
}

.r-border {
  border-right: 1px solid rgba(10, 11, 49, 0.20);
}

.lc-border {
  border-left: 1px solid #FF5722;
}

.full-border {
  border: 1px solid !important;
}

.full-border-grey {
  border: 1px solid rgba(128, 128, 128, 0.44) !important;
}

.margin-center {
  margin: 0 auto;
}

.pad-0 {
  padding: 0;
}

.btn {
  border: none;
  outline: none;
  cursor: pointer;
}

.mdl-button.btn-success {
  background: #4CB973;
}

.mdl-button.btn-black {
  background: black;
}

.mdl-button.btn-default {
  background: grey;
}

.mdl-button.btn-succes:hover {
  background-color: #009688;
}

.circle {
  border-radius: 50%;
}

.clickable {
  cursor: pointer;
}

.vbottom {
  vertical-align: bottom;
}

.material-icons.mdi-lg {
  font-size: 80px;
}

.material-icons.mdi-sm {
  font-size: 20px;
}

.hide {
  display: none;
}

.show {
  display: block;
}


/*Dropdown Menu*/

.dropdown-wrapper {
  position: relative;
}

.dropdown-wrapper.mdl-navigation__link,
{
  opacity: 1;
}

.dropdown-link {
  padding-left: 10px;
}

.dropdown-content {
  position: absolute;
  width: 100%;
  min-width: 100px;
  background: white;
  display: none;
}

.dropdown-item {
  line-height: 40px;
  padding-left: 10px;
  display: block;
  color: black;
}

.dropdown-wrapper:hover .dropdown-content {
  display: block;
}

.dropdown-item:hover {
  background: #EC3D2E;
  color: white;
}


/*SLIDED - ACCORDION*/

.slide-wrapper {
  border-radius: 10px;
  margin-bottom: 10px;
}

.slide-content {
  display: none;
}

.slide-link {
  cursor: pointer;
  border-radius: 10px;
}

.slide-link:hover {
  background: rgba(158, 158, 158, 0.2);
  color: black;
}

.slide-link.is-active {
  background: rgba(16, 12, 12, 0.52);
  color: white;
  border-bottom-left-radius: 0;
  border-bottom-right-radius: 0;
}


/*AJAX LOADER - OVERLAY*/

.overlay {
  background: hsla(0, 0%, 100%, .8);
  width: 100%;
  height: 100%;
  min-height: 100%;
  position: absolute;
  top: 0;
  left: 0;
  z-index: 2;
}

.loader .mdl-spinner {
  position: fixed;
  top: 50%;
  left: 50%;
  z-index: 7;
}


/*LAZY LOADER*/

.lazy-loader {
  padding: 20px 0;
}


/*ICONS WITH INPUT*/

.mdl-textfield {
  position: relative;
}

.mdl-textfield .material-icons {
  position: absolute;
  top: 20px;
  right: 0;
}

.mdl-textfield.is-focused .material-icons {
  color: rgb(63, 81, 181)
}


/*VERTICAL TABS*/

.vertical-mdl-tabs .mdl-tabs__tab-bar {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: inherit;
  border-bottom: none;
}

.vertical-mdl-tabs .side-tabs {
  width: 100%;
  height: inherit;
  padding-left: 5px;
  line-height: 35px;
  box-sizing: border-box;
  text-transform: capitalize;
  cursor: pointer;
}

.vertical-mdl-tabs .side-tabs:hover,
.vertical-mdl-tabs .side-tabs.is-active:hover {
  background-color: #ED462F;
  color: white;
}

.vertical-mdl-tabs .side-tabs.is-active {
  border-right: 2px solid #ED462F;
  color: #ED462F;
}


/*MODAL WINDOW*/

.modal-overlay {
  position: fixed;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  background-color: rgba(0, 0, 0, 0.8);
  z-index: 100;
  overflow: auto;
}

.modal-wrapper {
  position: absolute;
  padding: 15px;
  top: 50%;
  left: 50%;
  background: white;
  -webkit-transform: translatex(-50%) translatey(-50%);
  -moz-transform: translatex(-50%) translatey(-50%);
  -ms-transform: translatex(-50%) translatey(-50%);
  -o-transform: translatex(-50%) translatey(-50%);
  transform: translate(-50%, -50%);
  z-index: 101;
}

.modal-actions .mdl-button {
  min-width: 120px;
}


/*SCROLL FIX*/

.scroll-fix {
  position: fixed;
  padding: 20px;
  min-width: 320px;
}


/*NOTIFICATiON*/

.notification-wrapper .mdl-spinner {
  position: relative;
  top: 8px;
}

.notification-wrapper {
  position: absolute;
  width: 100%;
  height: 100%;
  text-align: center;
  color: white;
}

.mdl-layout__container .mdl-layout__header.notification-error {
  background: #F44336;
}

.mdl-layout__container .mdl-layout__header.notification-success {
  background: #4CAF50;
}

.notification-header .mdl-layout-title {
  color: white;
}

.notification-message {
  display: inline-block;
  padding-right: 10px;
  line-height: 64px;
}

.code-block pre {
  display: block;
  padding: 9.5px;
  margin: 0 0 10px;
  font-size: 13px;
  line-height: 1.42857143;
  color: #333;
  word-break: break-all;
  word-wrap: break-word;
  background-color: #f5f5f5;
  border: 1px solid #ccc;
  border-radius: 4px;
}

